# hackafor-crawler-amz

./: CHANGELOG.rst  README.md  requirements.txt  setup.cfg
hackafor_crawler_amz/: __main__.py  crawler.py
tests/: test_crawler.py
