[metadata]
name = hackafor_crawler_amz
version = 1.2.3
author = Emmanuel Hernandez
author_email = chermdev@gmail.com
description = Crawler to get some data from a product url.
long_description = file: README.md, CHANGELOG.rst, LICENSE.rst
license = MIT
classifiers =
    Programming Language :: Python :: 3
[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    playwright
    lxml
    httpx
[options.package_data]
hackafor_crawler_amz = user-agents.txt
[options.entry_points]
console_scripts =
    hackafor_crawler_amz = hackafor_crawler_amz.crawler:cli
[options.packages.find]
where = .
exclude =
    examples*
    tools*
    docs*
    hackafor_crawler_amz.tests*